pl: Add apis to add/set/get list attributes